@@ -43,6 +43,7 @@ bugfix:
 - fix address-edit filter=(object overrides.upper.level)
 - fix service-merger replace value() with getDestPort()
 - fix service-merger help description
+- fix address-edit actions=AddToGroup where shared objects need to be added to childDG | new argument devicegroupname if location=any
 
 
 1.5.13
